// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js-flow 1`] = `
"declare module A {
  declare function foo(): string;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
declare module A {
  declare function foo(): string;
}
"
`;

exports[`B.js-flow 1`] = `
"/**
 * @providesModule B
 * @flow
 */

module.exports = require('A');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule B
 * @flow
 */

module.exports = require(\\"A\\");
"
`;

exports[`C.js-flow 1`] = `
"/**
 * @providesModule C
 * @flow
 */

module.exports = require('B');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule C
 * @flow
 */

module.exports = require(\\"B\\");
"
`;

exports[`D.js-flow 1`] = `
"/**
 * @providesModule D
 * @flow
 */

var bar1: string = require('A');
var bar2: string = require('B');
var bar3: string = require('C');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule D
 * @flow
 */

var bar1: string = require(\\"A\\");
var bar2: string = require(\\"B\\");
var bar3: string = require(\\"C\\");
"
`;
